# anki-listen-repeat-audio

./: .gitignore  CLAUDE.md  README.md  generate-practice-audio.py  pyproject.toml  test_generate.py
.github/workflows/: ci.yml  claude-interactive.yml  claude-pr-review.yml
