[project]
name = "anki-listen-repeat-audio"
version = "1.0.0"
requires-python = ">=3.6"

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long — handled by formatter where possible
    "UP032",  # f-string format spec — keep for readability
]
